--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,35 +29,35 @@ steps:
 
 - task: AzureCLI@1
   inputs:
-    azureSubscription: 'build-demo'
+    azureSubscription: 'Visual Studio Enterprise'
     scriptLocation: 'inlineScript'
     inlineScript: 'az extension add -n azure-cli-ml'
     workingDirectory: 'model-training'
 
 - task: AzureCLI@1
   inputs:
-    azureSubscription: 'build-demo'
+    azureSubscription: 'Visual Studio Enterprise'
     scriptLocation: 'inlineScript'
     inlineScript: 'az ml folder attach -w build-2019-demo -g scottgu-all-hands'
     workingDirectory: ''
 
 - task: AzureCLI@1
   inputs:
-    azureSubscription: 'build-demo'
+    azureSubscription: 'Visual Studio Enterprise'
     scriptLocation: 'inlineScript'
     inlineScript: 'az ml run submit-script -c sklearn -e test -d training-env.yml train-sklearn.py'
     workingDirectory: 'model-training'
 
 - task: AzureCLI@1
   inputs:
-    azureSubscription: 'build-demo'
+    azureSubscription: 'Visual Studio Enterprise'
     scriptLocation: 'inlineScript'
     inlineScript: 'az ml model register -n mymodel -p sklearn_regression_model.pkl -t model.json'
     workingDirectory: 'model-deployment'
     
 - task: AzureCLI@1
   inputs:
-    azureSubscription: 'build-demo'
+    azureSubscription: 'Visual Studio Enterprise'
     scriptLocation: 'inlineScript'
     inlineScript: 'az ml model deploy -n acicicd -f model.json --ic inferenceConfig.yml --dc aciDeploymentConfig.yml --overwrite'
     workingDirectory: 'model-deployment'
